fix: clean up the experiment

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ absl-py
 attr
 dm-tree
 numpy
+pandas
 Pillow
 tensorboard
 tensorflow
 tensorflow-federated
 tensorflow-gan
 tensorflow-privacy
+tensorflow-addons
